cmake_minimum_required(VERSION 2.8.8)
project(harmont)

set (harmont_VERSION_MAJOR 0)
set (harmont_VERSION_MINOR 1)

configure_file (
  "${PROJECT_SOURCE_DIR}/config.hpp.in"
  "${PROJECT_SOURCE_DIR}/include/config.hpp"
)

include_directories("${PROJECT_SOURCE_DIR}")
include_directories("${PROJECT_BINARY_DIR}")
include_directories("${PROJECT_SOURCE_DIR}/include")
set(CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake/modules)

if(CMAKE_COMPILER_IS_GNUCXX)
    if (NOT WIN32)
        add_definitions(-fPIC)
    else()
        add_definitions(-DM_LOG2E=1.44269504088896340736)
    endif()
	add_definitions(-O3)
	add_definitions(-g)
	add_definitions(-std=c++1y)
    add_definitions(-Wall)
    add_definitions(-Wno-unused-function)
    add_definitions(-Wno-unused-local-typedefs)
    add_definitions(-Wno-ignored-attributes)
    add_definitions(-Wno-deprecated-declarations)
    add_definitions(-Wno-misleading-indentation)
endif()

find_package(Eigen)
find_package(OpenGL)
find_package(GLEW)
find_package(RGBE)
find_package(Boost COMPONENTS system regex)

find_package(Plustache)
if (PLUSTACHE_FOUND)
    add_definitions(-DUSE_PLUSTACHE)
    if (RGBE_FOUND)
        add_definitions(-DBUILD_DEFERRED_RENDERER)
    endif()
else()
    message(STATUS "No plustache package found. Plustache support will be disabled.")
endif()

find_package(GLUT)
if (GLUT_FOUND)
    add_definitions(-DUSE_FREEGLUT)
else()
    message(STATUS "No freeglut package found. Freeglut support will be disabled.")
endif()

find_package(Cartan)
if (CARTAN_FOUND)
    add_definitions(-DUSE_CARTAN)
else()
    message(STATUS "No Cartan package found. Cartan support will be disabled.")
endif()

find_package(OpenMesh)

find_package(PCL COMPONENTS common io)
if (PCL_FOUND)
    add_definitions(-DUSE_PCL)
else()
    message(STATUS "No PCL package found. PCL support will be disabled.")
endif()


file (GLOB_RECURSE obj RELATIVE "${PROJECT_SOURCE_DIR}" "src/*.cpp")
if (GLEW_FOUND AND EIGEN_FOUND)
	include_directories(${GLEW_INCLUDE_DIRS})
	include_directories(${EIGEN_INCLUDE_DIRS})
	include_directories(${Boost_INCLUDE_DIRS})
    if(PLUSTACHE_FOUND)
        include_directories(${PLUSTACHE_INCLUDE_DIRS})
    else()
        set(PLUSTACHE_LIBRARIES "")
    endif()
    if(GLUT_FOUND)
        include_directories(${GLUT_INCLUDE_DIRS})
    else()
        set(GLUT_LIBRARIES "")
    endif()
    if(CARTAN_FOUND)
        include_directories(${CARTAN_INCLUDE_DIRS})
    else()
        set(CARTAN_LIBRARIES "")
    endif()
    if(PCL_FOUND)
        include_directories(${PCL_INCLUDE_DIRS})
    else()
        set(PCL_LIBRARIES "")
    endif()
    if(RGBE_FOUND)
        include_directories(${RGBE_INCLUDE_DIRS})
    else()
        set(RGBE_LIBRARIES "")
    endif()
    find_package(Boost COMPONENTS system regex)
	add_library(harmont SHARED ${obj})
	target_link_libraries(harmont ${Boost_LIBRARIES} ${OPENGL_LIBRARIES} ${GLUT_LIBRARIES} ${GLEW_LIBRARIES} ${PLUSTACHE_LIBRARIES} ${CARTAN_LIBRARIES} ${PCL_LIBRARIES} ${RGBE_LIBRARIES} "dl")

	# install binary
    if (WIN32)
        install (FILES "${PROJECT_BINARY_DIR}/libharmont.dll.a" DESTINATION lib)
        install (FILES "${PROJECT_BINARY_DIR}/libharmont.dll" DESTINATION lib)
        install (FILES "${PROJECT_BINARY_DIR}/libharmont.dll" DESTINATION bin)
    else()
        install (TARGETS harmont DESTINATION lib)
    endif()
	# install header
	install (DIRECTORY include/ DESTINATION include/harmont)
    # install shader
    if (PLUSTACHE_FOUND AND RGBE_FOUND)
        install (DIRECTORY glsl/ DESTINATION include/harmont/glsl)

        if (PCL_FOUND)
            add_executable(pcl_deferred EXCLUDE_FROM_ALL "${PROJECT_SOURCE_DIR}/examples/pcl_deferred/pcl_deferred.cpp")
            target_link_libraries(pcl_deferred harmont ${GLUT_LIBRARIES} ${GLEW_LIBRARIES} ${PCL_LIBRARIES} ${Boost_LIBRARIES} "GL")
        endif()
        if (CARTAN_FOUND AND OPENMESH_FOUND)
            add_executable(mesh_deferred EXCLUDE_FROM_ALL "${PROJECT_SOURCE_DIR}/examples/mesh_deferred/mesh_deferred.cpp")
            target_link_libraries(mesh_deferred harmont ${GLUT_LIBRARIES} ${GLEW_LIBRARIES} ${CARTAN_LIBRARIES} ${OPENMESH_LIBRARIES} ${Boost_LIBRARIES} "GL")
        endif()
    endif()
endif()

